# learn-opengl-model-loader

./: .gitignore  CMakeLists.txt  CMakeSettings.json  vcpkg.json
assets/: brick_cylinder.mtl  frag.glsl  vert.glsl
src/: CMakeLists.txt  Mesh.cpp  Mesh.h  lighting.cpp  lighting.h  main.cpp  model.cpp  model.h  shader.cpp
